fix(styles): apply custom scrollbar to vertical nav (#4123)

--- a/packages/styles/src/vertical-nav.scss
+++ b/packages/styles/src/vertical-nav.scss
@@ -17,6 +17,8 @@ $block: #{$fd-namespace}-vertical-nav;
   height: 100%;
 
   &--overflow {
+    @include fd-scrollbar();
+
     overflow-y: scroll;
   }
 
